--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,12 +56,13 @@ header {
     font-family: 'Karma', serif; }
   
   /*Imagenes tamaño y caracteristicas*/
-  .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    padding-top: 56px; }
+ .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  padding-top: 20px; 
+  padding-bottom: 20px; }
   
   .fotoProducto {
     padding: 20px;
